--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">Clase_M8</string>
-    <string name="user_name">Introduce el nombre de usuario</string>
-    <string name="contraseña">Introduce la contraseña</string>
-    <string name="registrar">Registrar</string>
+    <string name="app_name" translatable="false">Clase_M8</string>
+    <string name="user_name">Nombre de usuario</string>
+    <string name="contraseña">Contraseña</string>
+    <string name="registrar" translatable="false">Registrar</string>
     <string name="anadir_incidencia">Añadir Incidencia</string>
     <string name="listar_incidencia">Listar Incidencia</string>
     <string name="eliminar_incidencia">Eliminar Incidencia</string>
     <string name="contenido_incidencia">ingresa la incidencia</string>
+    <string name="guardar">Guardar</string>
     <string name="ayuda">Ayuda</string>
-
-
+    <string name="vacio">Registro eliminado</string>
 </resources>
